Tailor config file to course website

--- a/_config.yml
+++ b/_config.yml
@@ -13,12 +13,11 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: MM
+title: Performant Computing and Statistical Algoware Development
 email:
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Course webpage for "Performant Computing and Statistical Algoware Development"
+  at Johns Hopkins Biostatistics, taught by Aki Nishimura.
 twitter_username: username
 github_username: username
 minimal_mistakes_skin: default
@@ -58,34 +57,25 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "First Lastname"
+  name   : "Instructor: Aki Nishimura"
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  bio    : "Time and Location: TBD"
   links:
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      url: "https://"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+    # - label: "Website"
+    #   icon: "fas fa-fw fa-link"
+    #   url: "https://"
+    # - label: "Course GitHub Repo"
+    #   icon: "fab fa-fw fa-github"
+    #   url: "https://github.com/aki-nishimura/performant-statistical-computing"
+    - label: "&#x61;&#x6b;&#x69;&#x2e;&#x6e;&#x69;&#x73;&#x68;&#x69;&#x6d;&#x75;&#x72;&#x61;&#x40;&#x6a;&#x68;&#x75;&#x2e;&#x65;&#x64;&#x75;&#xa;"
+      icon: "far fa-fw fa-envelope"
+      url: "&#x61;&#x6b;&#x69;&#x2e;&#x6e;&#x69;&#x73;&#x68;&#x69;&#x6d;&#x75;&#x72;&#x61;&#x40;&#x6a;&#x68;&#x75;&#x2e;&#x65;&#x64;&#x75;&#xa;" # in HTML entities (e.g. use https://mothereff.in/html-entities for conversion)
 
 footer:
   links:
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+    # - label: "GitHub"
+    #   icon: "fab fa-fw fa-github"
+    #   url: "https://github.com/"
 
 defaults:
   # _posts
