--- a/_config.yml
+++ b/_config.yml
@@ -55,6 +55,7 @@ plugins:
   - jekyll-feed
   - jemoji
   - jekyll-include-cache
+  - jekyll-redirect-from
 
 author:
   name   : "Instructor: Aki Nishimura"
