--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ plugins:
 author:
   name   : "Instructor: Aki Nishimura"
   avatar : "/assets/images/instructor.jpg"
-  bio    : "Time and Location: TBD"
+  bio    : "Time: Friday 10:30&thinsp;&ndash;&thinsp;11:50am<br> Location: Instructor's Zoom room"
   links:
     # - label: "Website"
     #   icon: "fas fa-fw fa-link"
